Create CommodityInfoActivity with a single toolbar.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </activity>
         <activity android:name=".activity.CommodityListActivity">
         </activity>
+        <activity android:name=".activity.CommodityInfoActivity">
+        </activity>
     </application>
 
 </manifest>
