Create VoiceMailActivity, add some simple interaction logic.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         </activity>
         <activity android:name=".activity.CommodityInfoActivity">
         </activity>
+        <activity android:name=".activity.VoiceMailActivity">
+        </activity>
     </application>
 
 </manifest>
