Create Translucent Toolbar test Activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         </activity>
         <activity android:name=".activity.VoiceMailActivity">
         </activity>
+        <activity android:name=".activity.TranslucentToolbarActivity">
+        </activity>
     </application>
 
 </manifest>
